# proxy-pool

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
src/: config.rs  main.rs
src/api/: dashboard.html  mod.rs
src/checker/: mod.rs
src/fetcher/: mod.rs  sources.rs
src/pool/: cooldown.rs  mod.rs  proxy.rs  scorer.rs
src/storage/: mod.rs
